Fixed issue with the article domain in the viewer on mobile -- wasn't respecting EM's when set to display: block
Also, fixed touch interactions on mobile so that selection didn't come and go as one tapped in the list.

--- a/App/css/viewer.css
+++ b/App/css/viewer.css
@@ -70,7 +70,6 @@ p {
     overflow: hidden;
     font-size: 0.8em;
     color: grey;
-    display: block;
     text-decoration: none;
 }
 
